# viberun

./: .mise.toml  .pre-commit-config.yaml  AGENTS.md  DEVELOPMENT.md  Dockerfile  Dockerfile.proxy  FUTUREPLANS.md  README.md  TODO.md  go.mod  go.sum  install.sh
.github/workflows/: dev.yml  nightly.yml  release.yml
cmd/viberun/: agent_clear_test.go  apps_stream.go  attach.go  attach_test.go  authcopy.go  authcopy_test.go  clipboard_upload_integration_test.go  depaware.txt  forward_manager.go  gateway.go  (+44 more)
cmd/viberun-auth/: main.go
cmd/viberun-server/: agentcheck.go  agentcheck_test.go  authcopy.go  authcopy_test.go  branch_apply.go  branch_apply_main_test.go  branch_apply_safe_test.go  branch_apply_test.go  branch_command.go  branch_command_test.go  branch_create.go  branch_create_test.go  branch_meta.go  branch_meta_test.go  btrfs_home.go  btrfs_home_test.go  btrfs_snapshot.go  containerconfig.go  delete_app_test.go  depaware.txt  docker_args_test.go  docker_helpers.go  gateway.go  hostrpc.go  hostrpc_branch_apply_test.go  hostrpc_branch_delete_test.go  hostrpc_extra_test.go  hostrpc_test.go  main.go  main_test.go  proxy.go  update_check.go  userconfig.go  wipe.go
config/: AGENTS.app.md  bashrc-viberun.sh  caddy-proxy.Caddyfile  codex-config.toml  mise.app.toml  starship.toml  tmux.conf
docs/: EPICS-STORIES-shell-startup.md  PRD-shell-startup.md  TECHDESIGN-shell-startup.md  container-config-plan.md  shell-setup-plan.md
packaging/pypi/: MANIFEST.in  README.md  pyproject.toml
packaging/pypi/viberun/: __init__.py  cli.py
tools/: addlicense.sh  tools.go
(+124 files in other folders)
