[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "viberun"
version = "0.0.0"
description = "viberun CLI"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "BSD-3-Clause" }
classifiers = [
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
]

[project.scripts]
viberun = "viberun.__main__:main"

[tool.setuptools]
packages = ["viberun"]
include-package-data = true

[tool.setuptools.package-data]
viberun = ["vendor/**"]
